# services/api-gateway/docs/swagger.yaml
@@ -9,6 +9,15 @@ definitions:
       user:
         $ref: '#/definitions/github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.UserData'
     type: object
+  github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.CreatePostRequest:
+    properties:
+      content:
+        type: string
+      visibility:
+        type: string
+    required:
+    - content
+    type: object
   github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.ErrorResponse:
     properties:
       errors: {}
@@ -16,6 +25,15 @@ definitions:
         type: string
       success:
         type: string
+    type: object
+  github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.GetContentServiceHealthResponse:
+    properties:
+      data:
+        $ref: '#/definitions/github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.GetUserServiceHealthData'
+      message:
+        type: string
+      success:
+        type: boolean
     type: object
   github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.GetMeResponse:
     properties:
@@ -69,8 +87,6 @@ definitions:
     properties:
       refresh_token:
         type: string
-      userID:
-        type: string
     required:
     - refresh_token
     type: object
@@ -80,6 +96,33 @@ definitions:
         type: string
       success:
         type: boolean
+    type: object
+  github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.PostResponse:
+    properties:
+      author:
+        $ref: '#/definitions/github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.UserSummary'
+      author_id:
+        type: string
+      bookmark_count:
+        type: integer
+      content:
+        type: string
+      created_at:
+        type: string
+      id:
+        type: string
+      like_count:
+        type: integer
+      reply_count:
+        type: integer
+      reply_to_post_id:
+        type: string
+      repost_count:
+        type: integer
+      updated_at:
+        type: string
+      visibility:
+        type: string
     type: object
   github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.RefreshTokenRequest:
     properties:
@@ -142,6 +185,19 @@ definitions:
       username:
         type: string
     type: object
+  github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.UserSummary:
+    properties:
+      avatar_url:
+        type: string
+      display_name:
+        type: string
+      id:
+        type: string
+      is_verified:
+        type: boolean
+      username:
+        type: string
+    type: object
 host: localhost:8080
 info:
   contact: {}
@@ -151,6 +207,218 @@ info:
   title: Threadly API Gateway
   version: "1.0"
 paths:
+  /contents/health:
+    get:
+      consumes:
+      - application/json
+      description: Get the status of content service
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.GetContentServiceHealthResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.ErrorResponse'
+      tags:
+      - Contents
+  /contents/posts:
+    post:
+      consumes:
+      - application/json
+      description: Creates a new Threadly post of a user and returns the new post.
+      parameters:
+      - description: Create post request body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.CreatePostRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.PostResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.ErrorResponse'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Create a post
+      tags:
+      - Contents
+  /contents/posts/{postID}:
+    delete:
+      description: Returns the delett post status.
+      parameters:
+      - description: postID
+        in: path
+        name: postID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+          schema: {}
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Delete a post
+      tags:
+      - Contents
+    get:
+      description: Returns the requested post.
+      parameters:
+      - description: postID
+        in: path
+        name: postID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.PostResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get a post
+      tags:
+      - Contents
+  /contents/posts/{postID}/replies:
+    get:
+      consumes:
+      - application/json
+      description: Creates a new reply to a post and returns the new reply.
+      parameters:
+      - description: postID
+        in: path
+        name: postID
+        required: true
+        type: string
+      - in: query
+        name: cursor
+        type: string
+      - in: query
+        maximum: 50
+        minimum: 0
+        name: limit
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            items:
+              $ref: '#/definitions/github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.PostResponse'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.ErrorResponse'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get replies of a post
+      tags:
+      - Contents
+    post:
+      consumes:
+      - application/json
+      description: Creates a new reply to a post and returns the new reply.
+      parameters:
+      - description: postID
+        in: path
+        name: postID
+        required: true
+        type: string
+      - description: Create reply request body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.CreatePostRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.PostResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.ErrorResponse'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_trungquantrannguyen_threadly_services_api-gateway_internal_dto.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Create a reply post
+      tags:
+      - Contents
   /health:
     get:
       consumes:
